testing static pages; sass

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 
     <article>
-        <h1>Page Not Found!</h1>
-        <p>The page you requested could not be found.</p>
+        <h1>Poo. That's a 404 Error.</h1>
+        <p>We just can't find what you are looking for. We're very sorry about that.</p>
     </article>
 
 {{ end }}
